<resources>
    <string name="app_name">HG0086</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
    <string name="lotter_me_title">个人中心</string>
    <string name="lotter_me_bal">用户余额：</string>
    <string name="lotter_me_am">上午好！</string>
    <string name="lotter_me_pm">下午好！</string>
    <string name="lotter_me_jszd">即时注单</string>
    <string name="lotter_me_jryj">今日已结</string>
    <string name="lotter_me_kjjg">开奖结果</string>
    <string name="lotter_me_jrsy">今日输赢</string>
    <string name="lotter_me_zxkf">在线客服</string>
    <string name="lotter_games_rule">游戏规则</string>
    <string name="lotter_bjsc">北京赛车</string>
    <string name="lotter_hlsx">欢乐生肖</string>
    <string name="lotter_jssc">极速赛车</string>
    <string name="lotter_jsft">极速飞艇</string>
    <string name="lotter_ffc">分分彩</string>
    <string name="lotter_sfc">三分彩</string>
    <string name="lotter_wfc">五分彩</string>
    <string name="lotter_efc">腾讯二分彩</string>
    <string name="lotter_pcdd">PC蛋蛋</string>
    <string name="lotter_k3">江苏快3</string>
    <string name="lotter_xync">幸运农场</string>
    <string name="lotter_klsfc">快乐十分</string>
    <string name="lotter_lhc">香港六合彩</string>
    <string name="lotter_jsk3">极速快三</string>
    <string name="lotter_xyft">幸运飞艇</string>
    <string name="lotter_more">更多彩种</string>
    <string name="lotter_not_open">未开盘</string>
    <string name="lotter_ing">开奖中</string>
    <string name="lotter_close">已封盘</string>
    <string name="lotter_number">开奖号码</string>
    <string name="lotter_periods">期数</string>
    <string name="lotter_menu">系统菜单</string>
    <string name="lotter_back_hall">返回大厅</string>
    <string name="lotter_dragon">龙</string>
    <string name="lotter_tiger">虎</string>
    <string name="lotter_he">和</string>
    <string name="lotter_snake">蛇</string>
    <string name="lotter_rabbit">兔</string>
    <string name="lotter_horse">马</string>
    <string name="lotter_cow">牛</string>
    <string name="lotter_sheep">羊</string>
    <string name="lotter_monkey">猴</string>
    <string name="lotter_chook">鸡</string>
    <string name="lotter_dog">狗</string>
    <string name="lotter_pig">猪</string>
    <string name="lotter_mouse">鼠</string>
    <string name="lotter_two_sides">两面</string>
    <string name="lotter_total">总和</string>
    <string name="lotter_total_lh">总和、龙虎</string>
    <string name="lotter_total_da">总和大</string>
    <string name="lotter_total_xiao">总和小</string>
    <string name="lotter_total_dan">总和单</string>
    <string name="lotter_total_shuang">总和双</string>
    <string name="lotter_total_w_big">总尾大</string>
    <string name="lotter_total_w_small">总尾小</string>
    <string name="lotter_wei_big">尾大</string>
    <string name="lotter_wei_small">尾小</string>
    <string name="lotter_weishu">尾数</string>
    <string name="lotter_weishu0">0尾</string>
    <string name="lotter_weishu1">1尾</string>
    <string name="lotter_weishu2">2尾</string>
    <string name="lotter_weishu3">3尾</string>
    <string name="lotter_weishu4">4尾</string>
    <string name="lotter_weishu5">5尾</string>
    <string name="lotter_weishu6">6尾</string>
    <string name="lotter_weishu7">7尾</string>
    <string name="lotter_weishu8">8尾</string>
    <string name="lotter_weishu9">9尾</string>
    <string name="lotter_six_tx">特肖</string>
    <string name="lotter_six_elx">二连肖</string>
    <string name="lotter_six_lx3">三连肖</string>
    <string name="lotter_six_lx4">四连肖</string>
    <string name="lotter_six_lx5">五连肖</string>
    <string name="lotter_qi_number">期</string>
    <string name="lotter_he_dan">合单</string>
    <string name="lotter_he_shuang">合双</string>
    <string name="lotter_ball_first">第一球</string>
    <string name="lotter_dong">东</string>
    <string name="lotter_nan">南</string>
    <string name="lotter_xi">西</string>
    <string name="lotter_bei">北</string>
    <string name="lotter_zhong">中</string>
    <string name="lotter_fa">发</string>
    <string name="lotter_bai">白</string>
    <string name="lotter_qs">前三</string>
    <string name="lotter_bx">半顺</string>
    <string name="lotter_zl">杂六</string>
    <string name="lotter_zs">中三</string>
    <string name="lotter_hs">后三</string>
    <string name="lotter_gjd">冠军大</string>
    <string name="lotter_gjx">冠军小</string>
    <string name="lotter_gjdan">冠军单</string>
    <string name="lotter_gjshuang">冠军双</string>
    <string name="lotter_gjyjh">冠、亚军和</string>
    <string name="lotter_gjwin">冠军</string>
    <string name="lotter_yjwin">亚军</string>
    <string name="lotter_ranking3">第三名</string>
    <string name="lotter_ranking4">第四名</string>
    <string name="lotter_ranking5">第五名</string>
    <string name="lotter_ranking6">第六名</string>
    <string name="lotter_ranking7">第七名</string>
    <string name="lotter_ranking8">第八名</string>
    <string name="lotter_ranking9">第九名</string>
    <string name="lotter_ranking10">第十名</string>
    <string name="lotter_rankingzh">冠、亚军 组合</string>
    <string name="lotter_hezhi">和值</string>
    <string name="lotter_point_3">3点</string>
    <string name="lotter_point_4">4点</string>
    <string name="lotter_point_5">5点</string>
    <string name="lotter_point_6">6点</string>
    <string name="lotter_point_7">7点</string>
    <string name="lotter_point_8">8点</string>
    <string name="lotter_point_9">9点</string>
    <string name="lotter_point_10">10点</string>
    <string name="lotter_point_11">11点</string>
    <string name="lotter_point_12">12点</string>
    <string name="lotter_point_13">13点</string>
    <string name="lotter_point_14">14点</string>
    <string name="lotter_point_15">15点</string>
    <string name="lotter_point_16">16点</string>
    <string name="lotter_point_17">17点</string>
    <string name="lotter_point_18">18点</string>
    <string name="lotter_dxds">大小单双</string>
    <string name="lotter_tx">通选</string>
    <string name="lotter_bz">豹子</string>
    <string name="lotter_sz">顺子</string>
    <string name="lotter_dz">对子</string>
    <string name="lotter_sbt">三不同</string>
    <string name="lotter_sth">三同号</string>
    <string name="lotter_ethfx">二同号复选</string>
    <string name="lotter_ethdx">二同号单选</string>
    <string name="lotter_ebth">二不同号</string>
    <string name="lotter_cbc">猜必出</string>
    <string name="lotter_cbbc">猜必不出</string>
    <string name="lotter_hh">混合</string>
    <string name="lotter_dd">大单</string>
    <string name="lotter_xd">小单</string>
    <string name="lotter_ds">大双</string>
    <string name="lotter_xs">小双</string>
    <string name="lotter_jd">极大</string>
    <string name="lotter_jx">极小</string>
    <string name="lotter_hb">红波</string>
    <string name="lotter_lb">蓝波</string>
    <string name="lotter_llb">绿波</string>
    <string name="lotter_tm">特码</string>
    <string name="lotter_rx2">任选二</string>
    <string name="lotter_rx3">任选三</string>
    <string name="lotter_rx4">任选四</string>
    <string name="lotter_rx5">任选五</string>
    <string name="lotter_ewlz">二尾连中</string>
    <string name="lotter_swlz">三尾连中</string>
    <string name="lotter_sswlz">四尾连中</string>
    <string name="lotter_ewlbz">二尾连不中</string>
    <string name="lotter_swlbz">三尾连不中</string>
    <string name="lotter_sswlbz">四尾连不中</string>
    <string name="lotter_exlz">二肖连中</string>
    <string name="lotter_sxlz">三肖连中</string>
    <string name="lotter_ssxlz">四肖连中</string>
    <string name="lotter_wxlz">五肖连中</string>
    <string name="lotter_exlbz">二肖连不中</string>
    <string name="lotter_sxlbz">三肖连不中</string>
    <string name="lotter_ssxlbz">四肖连不中</string>
    <string name="lotter_szezs">三中二中三</string>
    <string name="lotter_eztze">二中特中二</string>
    <string name="lotter_sqz">三全中</string>
    <string name="lotter_sze">三中二</string>
    <string name="lotter_eqz">二全中</string>
    <string name="lotter_ezt">二中特</string>
    <string name="lotter_tc">特串</string>
    <string name="lotter_szy">四中一</string>
    <string name="lotter_z1t">正1特</string>
    <string name="lotter_z2t">正2特</string>
    <string name="lotter_z3t">正3特</string>
    <string name="lotter_z4t">正4特</string>
    <string name="lotter_z5t">正5特</string>
    <string name="lotter_z6t">正6特</string>
    <string name="lotter_zm">正码</string>
    <string name="lotter_ztm">正特码</string>
    <string name="lotter_zm16">正码1-6</string>
    <string name="lotter_zmgg">过关</string>
    <string name="lotter_zmlm">连码</string>
    <string name="lotter_zmbb">半波</string>
    <string name="lotter_zmyxws">一肖/尾数</string>
    <string name="lotter_zmtmsx">特码生肖</string>
    <string name="lotter_zmhx">合肖</string>
    <string name="lotter_zmsxl">生肖连</string>
    <string name="lotter_zmwsl">尾数连</string>
    <string name="lotter_zmzxbz">自选不中</string>
    <string name="lotter_ball15">1-5球</string>
    <string name="lotter_qzh">前中后</string>
    <string name="lotter_ygh">冠亚和</string>
    <string name="lotter_yg15">1-5名</string>
    <string name="lotter_yg610">6-10名</string>
    <string name="lotter_bet_yyz">已选中</string>
    <string name="lotter_bet_zhu">注</string>
    <string name="lotter_bet_limits8">不允许超过8个选项</string>
    <string name="lotter_bet_limits6">不允许超过6个选项</string>
    <string name="lotter_bet_limits10">不允许超过10个选项</string>
    <string name="lotter_bet_limits12">不允许超过12个选项</string>
    <string name="lotter_input_money">请输入投注金额</string>
    <string name="lotter_choice_method">请选择玩法</string>
    <string name="lotter_ball_second">第二球</string>
    <string name="lotter_ball_third">第三球</string>
    <string name="lotter_ball_fourth">第四球</string>
    <string name="lotter_ball_fifth">第五球</string>
    <string name="lotter_ball_sixth">第六球</string>
    <string name="deposite_aliqcpay_money_h">请输入汇款金额</string>
    <string name="deposite_submit1">申请存款</string>
    <string name="deposite_money">充值金额</string>
    <string name="deposite_type">支付渠道</string>
    <string name="deposite_type_h">请点击此处选择支付渠道 ⇊▼</string>
    <string name="games_ag_dz_bal">电子额度：</string>
    <string name="games_ag_my_bal">账户余额:</string>
    <string name="games_ag_out">真人转出</string>
    <string name="games_ag_in">真人转入</string>
    <string name="games_ag_input">输入金额</string>
    <string name="bet_record_event_type">赛事类型</string>
    <string name="bet_record_clearing">是否结算</string>
    <string name="bet_record_cancel">是否取消</string>
    <string name="bet_record_starttime">开始时间</string>
    <string name="bet_record_endtime">结束时间</string>
    <string name="bet_record_type">足球</string>
    <string name="bet_record_all">全部</string>
    <string name="bet_record_success">未取消交易单</string>
    <string name="bet_record_choice_time">请选择时间</string>
    <string name="bet_record_today">今日</string>
    <string name="bet_record_yestoday">昨日</string>
    <string name="bet_record_one_week">近一周</string>
    <string name="bet_record_month">本月 </string>
    <string name="bet_record_search">立即查询</string>
    <string name="bet_record_time">日期</string>
    <string name="bet_record_saishi">赛事</string>
    <string name="bet_record_money">金额</string>
    <string name="bet_record_win">输/赢</string>
    <string name="deposit_record_no_data">暂时没有记录</string>
    <string name="comm_back">返回</string>
</resources>