<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hgapp.a0086.common.widgets.NTitleBar
        android:id="@+id/tvThirdMobilePayBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backText="@string/comm_back" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_money"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etDepositThirdMobileMoney"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:hint="@string/deposite_aliqcpay_money_h"
            android:textSize="15sp"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBalanceTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp"
        android:gravity="center|left">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_type"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDepositThirdMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:gravity="center|left"
            android:textSize="15sp"
            android:text="@string/deposite_type_h" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />

    <Button
        android:id="@+id/btnDepositThirdMobileSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_tbn_height"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/deposite_submit1" />
</LinearLayout>