<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hgapp.a0086.common.widgets.NTitleBar
            android:id="@+id/tvBetRecordBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backText="@string/comm_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/l_view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_edit_height"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="40dp"
            android:gravity="left|center">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/bet_record_event_type"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/betRrcordGtype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@mipmap/icon_textview_transfer"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/bet_record_type"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/l_view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_edit_height"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="40dp"
            android:gravity="left|center">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/bet_record_clearing"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/betRrcordChecked"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@mipmap/icon_textview_transfer"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/bet_record_all"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/l_view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_edit_height"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="40dp"
            android:gravity="left|center">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/bet_record_cancel"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/betRrcordCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@mipmap/icon_textview_transfer"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/bet_record_success"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/l_view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_edit_height"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="40dp"
            android:gravity="center|left">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bet_record_starttime"
                android:textColor="@color/textview_hight"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvBetRecordStartTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@mipmap/icon_textview_transfer"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/bet_record_choice_time"
                android:textColor="#868686"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/l_view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_edit_height"

            android:layout_marginLeft="16dp"
            android:layout_marginRight="40dp"
            android:gravity="center|left">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bet_record_endtime"
                android:textColor="@color/textview_hight"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvBetRecordEndTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@mipmap/icon_textview_transfer"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/bet_record_choice_time"
                android:textColor="#868686"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/l_view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_edit_height"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="40dp"
            android:gravity="center|left">

            <TextView
                android:id="@+id/tvBetRecordToday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/bg_btn_no_focus"
                android:gravity="center"
                android:text="@string/bet_record_today"
                android:textColor="@color/n_edittext_pwd"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvBetRecordLastDay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_no_focus"
                android:gravity="center"
                android:text="@string/bet_record_yestoday"
                android:textColor="@color/n_edittext_pwd"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvBetRecordLastWeek"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_no_focus"
                android:gravity="center"
                android:text="@string/bet_record_one_week"
                android:textColor="@color/n_edittext_pwd"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvBetRecordLastMonth"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_no_focus"
                android:gravity="center"
                android:text="@string/bet_record_month"
                android:textColor="@color/n_edittext_pwd"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />


        <Button
            android:id="@+id/btnBetRecordSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_tbn_height"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/bet_record_search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bet_record_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bet_record_saishi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bet_record_money" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bet_record_win" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/l_view_color" />

        <!--<com.hgapp.a01.common.widgets.NListView
            android:id="@+id/lvBetRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />-->
        <TextView
            android:id="@+id/tvBetRecordNodataT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/deposit_record_no_data"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">
            <com.jcodecraeer.xrecyclerview.XRecyclerView
                android:id="@+id/lvBetRecord2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/betTTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/record_top"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </LinearLayout>